--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>I Love U</title>
+    <title>Seni Çok Seviyorum Bebeğim</title>
     <link type="text/css" rel="stylesheet" href="./love/default.css"/>
 
     <script type="text/javascript" src="./love/jquery.min.js"></script>
@@ -34,32 +34,32 @@
                 <div id="code">
                     <p>
                         <font color="#FF0000">
-                            <span class="say">亲爱的阿俊，我爱你</span><br/>
+                            <span class="say">Güzelim💝</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> 我知道我很懒</span><br/>
-                            <span class="say"> 我喜欢玩游戏，看小说，睡懒觉</span><br/>
-                            <span class="say"> 只剩下一点点时间陪你...</span><br/>
+                            <span class="say"> O kadar harika birisin ki sen balım</span><br/>
+                            <span class="say"> Ben her gün sana daha çok hayran kalıyor ve daha çok aşık oluyorum</span><br/>
+                            <span class="say"> Seni çooook seviyorum tatlım💞</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> 还不喜欢看书，减肥，带你出去玩</span><br/>
-                            <span class="say"> 我也不知道什么时候才能突然转性</span><br/>
-                            <span class="say"> 做一个能照顾好你的大男人</span><br/>
+                            <span class="say"> Sen benim hayatımın anlamısın</span><br/>
+                            <span class="say"> Sen benim her şeyimsin</span><br/>
+                            <span class="say"> Sen benim ruh eşimsin</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> 谢谢你这么久的体贴</span><br/>
-                            <span class="say"> 体贴我像个孩子</span><br/>
+                            <span class="say"> Çok çookk aşığım sana tatlım</span><br/>
+                            <span class="say"> Bu koccaman aşkımı hep açıklayacağım</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> 永远爱你，我的公主大人</span><br/>
+                            <span class="say"> Hepp senin olacağım</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"> (*^__^*) 嘻嘻</span><br/>
+                            <span class="say"> 💓💕I love youuuuu💓💕</span><br/>
                             <span class="say"> </span><br/>
-                            <span class="say"><span class="space"></span> -- 爱你的阿宁--</span>
+                            <span class="say"><span class="space"></span> -- Çok aşık bir çocukk--</span>
                         </font>
                     </p>
                 </div>
             </div>
             <div id="clock-box">
                 <span class="STYLE1"></span>
-                <font color="#33CC00">亲爱的阿俊，我喜欢你</font>
-                <span class="STYLE1">已经是……</span>
+                <font color="#33CC00">Prensesimle birlikte</font>
+                <span class="STYLE1">Harika günler geçirdik</span>
                 <div id="clock"></div>
              </div>
             <canvas id="canvas" width="1100" height="680"></canvas>
